Displaying list items from Local Storage

--- a/index.html
+++ b/index.html
@@ -48,23 +48,8 @@
                         </li>
                     </ul>
 
-                    <ul class="list-group list-group-flush" id="itemList">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span>Tarea 1</span>
-                            <span>
-                                <a><i class="bi bi-check-circle green"></i></a>
-                                <a><i class="bi bi-pencil-square blue"></i></a>
-                                <a><i class="bi bi-x-circle red"></i></a>
-                            </span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span>Tarea 2</span>
-                            <span>
-                                <a><i class="bi bi-check-circle green"></i></a>
-                                <a><i class="bi bi-pencil-square blue"></i></a>
-                                <a><i class="bi bi-x-circle red"></i></a>
-                            </span>
-                        </li>
+                    <ul class="list-group list-group-flush" id="itemsList">
+                        <!-- Use javascript to display list items here -->
                     </ul>
                 </div>
             </div>
