--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
         .list-group {
             font-size: 1.5rem;
         }
+        .show {
+            display: block;
+        }
+        .hide {
+            display: none;
+        }
     </style>
     </head>
+
     <body>
         <div class="container">
             <div class="row">
@@ -51,6 +58,10 @@
                     <ul class="list-group list-group-flush" id="itemsList">
                         <!-- Use javascript to display list items here -->
                     </ul>
+
+                    <input type="hidden" id="objIndex" value="">
+                    <input type="hidden" id="tabValue" value="all">
+
                 </div>
             </div>
         </div>
